# robocup_demo

./: README.md
configs/: fastdds.xml
scripts/: build.sh  sim_build_v2.sh  sim_start.sh  sim_start_v2.sh  sim_stop_v2.sh  start.sh  stop.sh
src/brain/behavior_trees/: game.xml
src/brain/behavior_trees/subtrees/: subtree_striker_freekick.xml  subtree_striker_play.xml
src/brain/config/: brain.yaml  config.yaml
src/brain/include/: brain.h  brain_communication.h  brain_config.h  brain_data.h  brain_tree.h  robot_client.h
src/brain/launch/: launch.py
src/brain/src/: brain.cpp  brain_communication.cpp  brain_config.cpp  brain_tree.cpp  main.cpp  robot_client.cpp
src/game_controller/include/: RoboCupGameControlData.h  game_controller_node.h
src/game_controller/launch/: launch.py
src/game_controller/src/: game_controller_node.cpp
src/interface/booster_msgs/include/: message_utils.h
src/interface/game_controller_interface/msg/: GameControlData.msg  RobotInfo.msg
src/sim_detection_bridge/: CMakeLists.txt  package.xml
src/sim_detection_bridge/config/: sim_detection_bridge.yaml
src/sim_detection_bridge/include/: sim_detection_bridge.h
src/sim_detection_bridge/launch/: sim_detection_bridge.launch.py
src/sim_detection_bridge/src/: sim_detection_bridge.cpp
src/vision/config/: vision.yaml  vision_sim.yaml
src/vision/launch/: launch.py
src/vision/src/: vision_node.cpp
src/whistle_detection/: CMakeLists.txt  package.xml
src/whistle_detection/src/: fftw_allocator.h  main.cpp  ring_buffer.h  whistle_detection.cpp  whistle_detection.h
